Source code display fixes (#886)
* fix extra padding in pre code blocks

* make source code page a monospaced font

--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -370,3 +370,7 @@ tt, code, kbd, pre, samp {
 	padding: 0.125rem 0.375rem;
 	font-size: 85%;
 }
+
+pre code {
+	padding: 0;
+}
